--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,6 @@
 FROM nvidia/cudagl:11.3.0-devel-ubuntu18.04
+#FROM nvidia/cudagl:10.2-devel-ubuntu18.04
+
 # setup timezone
 RUN echo 'America/New_York' > /etc/timezone && \
     ln -s /usr/share/zoneinfo/America/New_York /etc/localtime && \
@@ -33,10 +35,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 COPY ./install_python_3_7.sh /tmp/install_python_3_7.sh
 RUN chmod +x /tmp/install_python_3_7.sh && /tmp/install_python_3_7.sh
-COPY ./install_py_packages.sh /tmp/install_py_packages.sh
-RUN chmod +x /tmp/install_py_packages.sh && /tmp/install_py_packages.sh
 COPY ./install_diffhand.sh /tmp/install_diffhand.sh
 RUN chmod +x /tmp/install_diffhand.sh && /tmp/install_diffhand.sh
+COPY ./install_py_packages.sh /tmp/install_py_packages.sh
+RUN chmod +x /tmp/install_py_packages.sh && /tmp/install_py_packages.sh
+
 
 
 RUN rm -rf /tmp/*
